# devicesdk

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KNOWN_NOT_ISSUES.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  TROUBLESHOOT.md  WEBSITE_REVAMP_PLAN.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pricing.md  roadmap.md  turbo.json
.brand/: brand-package.html
.changeset/: README.md  add-update-project-tests.md  agent-friendly-sdk.md  ai-agent-readiness.md  alarm-subrequest-diag.md  api-token-description.md  audit-findings-batches.md  audit-fixes-2026-05.md  audit-followup.md  auth-token-hardening.md  baseline-cleanup.md  brand-chip-braces-mark.md  claude-agents-link.md  cleanup-subrequest-diag.md  cli-logs-command.md  cli-mdns-discovery.md  cli-preserve-host-on-refresh.md  cli-token-visibility.md  clock-display-self-init.md  config.json  credentials-test-coverage.md  critical-improvements.md  critical-safety-fixes-batch-01.md  cron-scheduling.md  cursor-based-pagination.md  dashboard-script-templates.md  dashboard-ux-fixes.md  debug-wedge-skill.md  defer-disconnect-user-worker.md  deploy-command-tests.md  deps-picomatch-redos.md  device-logging.md  device-partial-update-test.md  device-status-command.md  devices-missing-test-coverage.md  diag-worker-init.md  display-column-page-offset.md  dispose-target-stub.md  do-storage-row-guardrails.md  docs-mdns-first-login.md  (+102 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  dashboard-tests.yml  deploy.yml  docker.yml  firmware-esp32.yml  firmware-pico.yml  preview-deploys.yml  release.yml  website-deploy.yml
.opencode/commands/: feature.md  merge-pr.md  prepare-pr.md  pull.md  review-pr.md  run-local-e2e.md
apps/api/: .dev.vars.example  .gitignore  CHANGELOG.md  README.md  openapi.json  package.json  tsconfig.json  wrangler.jsonc
apps/dashboard/: .gitignore  CHANGELOG.md  README.md  index.html  openapi.json  package.json  quasar.config.ts  wrangler.jsonc
apps/server/: .env.example  CHANGELOG.md  bunfig.toml  openapi.json  package.json  tsconfig.json
apps/simulation/: CHANGELOG.md  index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts
apps/website/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  generate-agent-skills.js  generate-og.js  hugo.toml  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.toml
audit/: batch-01-critical-safety.md  batch-02-auth-tokens.md  batch-03-access-control.md  batch-04-deployment-hardening.md  batch-05-error-handling.md  batch-06-tests-coverage.md  batch-07-dependencies-critical.md  batch-08-dependencies-supply-chain.md  batch-09-runtime-correctness.md  batch-10-cloud-cleanup.md  batch-11-db-config.md  batch-12-api-docs.md  batch-13-docs-ops.md  batch-14-observability.md  open-source-readiness-audit.md  open-source-readiness-validation.md
docs/: ROADMAP.md  _index.md  cli.md  first-device.md  quickstart.md
docs/cli/: _index.md  deploy.md  flash.md  inspect.md  logs.md  status.md
docs/concepts/: architecture.md  cron-scheduling.md  emit-state.md  entrypoints.md  env-vars.md  rate-limits.md  versioning.md
docs/guides/: addressable-leds.md  control-from-browser.md  esp32-getting-started.md  home-assistant.md  inter-device-communication.md  real-time-watch.md  using-spi.md  using-uart.md
docs/hardware/: _index.md  esp32-c3.md  esp32-c61.md  pico-2w.md
docs/operations/: cloudflare-waf.md
docs/plans/: 2026-02-28-dashboard-ui-tests-design.md  2026-02-28-dashboard-ui-tests.md
docs/public/: ROADMAP.md  _index.md  changelog.md  first-device.md  mcp.md  quickstart.md
docs/resources/: changelog.md  devicesdk-vs-devicescript.md  faq.md  glossary.md  hardware.md
examples/: AGENTS.md  CLAUDE.md
examples/basic/: CHANGELOG.md  README.md  devicesdk-env.d.ts  devicesdk.ts  package.json
examples/esp32c3-clock/: .gitignore  CHANGELOG.md  README.md  devicesdk-env.d.ts  devicesdk.ts  package.json  tsconfig.json
examples/temperature-to-discord/: .gitignore  CHANGELOG.md  README.md  devicesdk.config.ts  devicesdk.ts  package.json  tsconfig.json
firmware/common/: base64_core.h
firmware/esp32/: .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATIONS.md  PROJECT_SUMMARY.md  README.md  package.json  partitions.csv  pytest_devicesdk_client.py  pytest_iotkit_client.py  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c61  test_integration.py  test_message_handler.py  test_websocket_mock.py
firmware/esp32/main/: CMakeLists.txt  Kconfig.projbuild  base64.c  base64.h  command_queue.h  config.h  devicesdk_main.c  display.c  display.h  font5x7.c  font5x7.h  hal.c  hal.h  idf_component.yml  iotkit_main.c  shared_buffers.c  shared_buffers.h  websocket_handler.c  websocket_handler.h  worker_task.c  worker_task.h
firmware/esp32/test/: CMakeLists.txt
firmware/esp32/test/mocks/: hal_mock.c  hal_mock.h
firmware/esp32/test/unit/: test_base64.cpp  test_websocket_handler.cpp  test_worker_commands.cpp
firmware/pico/: .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATIONS.md  Makefile  README.md  lwipopts.h  main.cpp  package.json  test.js
firmware/pico/test/: CMakeLists.txt
firmware/pico/test/mocks/: hal_mock.cpp  hal_mock.h  lwip_mock.cpp  lwip_mock.h
firmware/pico/test/mocks/pico/: cyw43_arch.h
firmware/pico/test/unit/: test_base64.cpp  test_display_update.cpp  test_i2c_commands.cpp  test_i2c_configure.cpp  test_ws_client.cpp
patches/: chanfana@3.3.0.patch
(+792 files in other folders)
